// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the useCase detail page. Should render detail of a useCase. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3 shrink-0"
      >
        <div
          class="bg-dial-slate-100 h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-blueberry font-semibold"
              >
                Remote Learning
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="w-20 h-20 px-1 py-1 rounded-full bg-dial-blueberry"
                >
                  <img
                    alt="Logo of Use Case."
                    class="object-contain dial-blueberry-filter w-14 h-14 mx-auto my-2 white-filter"
                    src="http://localhost:3000//assets/use-cases/remote-learning.svg"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              />
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <form>
          <div
            class="px-4 lg:px-0 py-4 lg:py-6"
          >
            <div
              class="flex flex-col gap-y-6 text-sm"
            >
              <div
                class="text-xl font-semibold text-dial-blueberry"
              >
                Edit Remote Learning
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field text-dial-blueberry"
                  for="name"
                >
                  Name
                </label>
                <input
                  class="text-sm w-full text-sm"
                  id="name"
                  name="name"
                  placeholder="Name"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field text-dial-blueberry"
                  for="use-case-sector"
                >
                  Sector
                </label>
                <div
                  class=" css-1uaxf62-container"
                  id="use-case-sector"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-:r0:-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="react-select__control css-afrqkl-control"
                  >
                    <div
                      class="react-select__value-container css-17t7gkf-ValueContainer"
                    >
                      <div
                        class="react-select__placeholder css-5rjclb-placeholder"
                        id="react-select-:r0:-placeholder"
                      >
                        Sector
                      </div>
                      <div
                        class="react-select__input-container css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-:r0:-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="react-select__input"
                          id="react-select-sector"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="text-lg"
                          fill="none"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field text-dial-blueberry"
                  for="use-case-maturity"
                >
                  Maturity
                </label>
                <div
                  class=" css-1uaxf62-container"
                  id="use-case-maturity"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-:r1:-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="react-select__control css-afrqkl-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1dimb5e-singleValue"
                      >
                        Published
                      </div>
                      <div
                        class="react-select__input-container css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="react-select__input"
                          id="react-select-maturity"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="text-lg"
                          fill="none"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="markdown-url"
                >
                  Markdown URL
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="markdown-url"
                    placeholder="Markdown URL"
                    value=""
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="image-uploader"
                >
                  Logo
                </label>
                <label
                  class="flex items-center"
                >
                  <input
                    accept=".jpg,.jpeg,.png,.bmp"
                    class="bg-white file:hidden w-full text-sm"
                    id="image-uploader"
                    name="imageFile"
                    type="file"
                  />
                  <div
                    class="-ml-11 flex p-1"
                  >
                    <span
                      class="h-full pl-1 border-l text-dial-gray-dark border-dial-gray-dark"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        version="1.1"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                        />
                        <path
                          d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                        />
                        <path
                          d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
                <div
                  class="text-xs italic text-dial-stratos"
                >
                  Note: Supported file types are jpg, png, and bmp
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire required-field"
                  id="description"
                >
                  Description
                </label>
                <div
                  class="editor-shell read-write"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Undo"
                        class="toolbar-item spaced"
                        disabled=""
                        title="Undo (Ctrl+Z)"
                        type="button"
                      >
                        <i
                          class="format undo"
                        />
                      </button>
                      <button
                        aria-label="Redo"
                        class="toolbar-item"
                        disabled=""
                        title="Redo (Ctrl+Y)"
                        type="button"
                      >
                        <i
                          class="format redo"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text style"
                        class="toolbar-item block-controls"
                        type="button"
                      >
                        <span
                          class="icon block-type paragraph"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Normal
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for font family"
                        class="toolbar-item font-family"
                        type="button"
                      >
                        <span
                          class="icon block-type font-family"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Arial
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Decrease font size"
                        class="toolbar-item font-decrement"
                        title="Decrease font size (Ctrl+Shift+,)"
                        type="button"
                      >
                        <i
                          class="format minus-icon"
                        />
                      </button>
                      <input
                        class="toolbar-item font-size-input"
                        max="72"
                        min="8"
                        title="Font size"
                        type="number"
                        value="15"
                      />
                      <button
                        aria-label="Increase font size"
                        class="toolbar-item font-increment"
                        title="Increase font size (Ctrl+Shift+.)"
                        type="button"
                      >
                        <i
                          class="format add-icon"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Format text as bold. Shortcut: Ctrl+B"
                        class="toolbar-item spaced "
                        title="Bold (Ctrl+B)"
                        type="button"
                      >
                        <i
                          class="format bold"
                        />
                      </button>
                      <button
                        aria-label="Format text as italics. Shortcut: Ctrl+I"
                        class="toolbar-item spaced "
                        title="Italic (Ctrl+I)"
                        type="button"
                      >
                        <i
                          class="format italic"
                        />
                      </button>
                      <button
                        aria-label="Format text to underlined. Shortcut: Ctrl+U"
                        class="toolbar-item spaced "
                        title="Underline (Ctrl+U)"
                        type="button"
                      >
                        <i
                          class="format underline"
                        />
                      </button>
                      <button
                        aria-label="Insert code block"
                        class="toolbar-item spaced "
                        title="Insert code block (Ctrl+Shift+C)"
                        type="button"
                      >
                        <i
                          class="format code"
                        />
                      </button>
                      <button
                        aria-label="Insert link"
                        class="toolbar-item spaced "
                        title="Insert link (Ctrl+K)"
                        type="button"
                      >
                        <i
                          class="format link"
                        />
                      </button>
                    </div>
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Formatting text color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon font-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting background color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon bg-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting options for additional text styles"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon dropdown-more"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Insert specialized editor node"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon plus"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Insert
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text alignment"
                        class="toolbar-item spaced alignment"
                        type="button"
                      >
                        <span
                          class="icon left-align"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Left Align
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="editor-container "
                  >
                    <div
                      class="editor-scroller"
                    >
                      <div
                        class="editor"
                      >
                        <div
                          aria-labelledby="description"
                          aria-placeholder="Description"
                          class="ContentEditable__root read-write"
                          contenteditable="true"
                          data-lexical-editor="true"
                          role="textbox"
                          spellcheck="true"
                          style="user-select: text; white-space: pre-wrap; word-break: break-word;"
                        >
                          <p
                            class="ExchangeLexicalTheme__paragraph ExchangeLexicalTheme__ltr"
                            dir="ltr"
                          >
                            <span
                              data-lexical-text="true"
                            >
                              Description for the use case.
                            </span>
                          </p>
                        </div>
                        <div
                          aria-hidden="true"
                        >
                          <div
                            class="ContentEditable__placeholder"
                          >
                            Description
                          </div>
                        </div>
                        <div
                          draggable="true"
                        >
                          <div
                            class="icon draggable-block-menu"
                            style="opacity: 0; transform: translate(-10000px, -10000px);"
                          >
                            <div
                              class="icon"
                            />
                          </div>
                        </div>
                        <div
                          class="draggable-block-target-line"
                        />
                        <div
                          class="link-editor"
                          style="opacity: 1; transform: translate(-5px, 10px);"
                        />
                        <div
                          class="table-cell-action-button-container"
                        />
                      </div>
                    </div>
                    <div />
                    <div
                      class="actions"
                    >
                      <button
                        aria-label="Disable speech to text"
                        class="action-button action-button-mic"
                        title="Speech To Text"
                        type="button"
                      >
                        <i
                          class="mic"
                        />
                      </button>
                      <button
                        aria-label="Clear editor contents"
                        class="action-button clear"
                        disabled=""
                        title="Clear"
                        type="button"
                      >
                        <i
                          class="clear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-wrap text-base mt-6 gap-3"
              >
                <button
                  class="submit-button"
                  type="submit"
                >
                  Submit Use Case
                </button>
                <button
                  class="cancel-button"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the useCase detail page. Should render edit page for logged in user. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3 shrink-0"
      >
        <div
          class="bg-dial-slate-100 h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-blueberry font-semibold"
              >
                Remote Learning
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="w-20 h-20 px-1 py-1 rounded-full bg-dial-blueberry"
                >
                  <img
                    alt="Logo of Use Case."
                    class="object-contain dial-blueberry-filter w-14 h-14 mx-auto my-2 white-filter"
                    src="http://localhost:3000//assets/use-cases/remote-learning.svg"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              />
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <form>
          <div
            class="px-4 lg:px-0 py-4 lg:py-6"
          >
            <div
              class="flex flex-col gap-y-6 text-sm"
            >
              <div
                class="text-xl font-semibold text-dial-blueberry"
              >
                Edit Remote Learning
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field text-dial-blueberry"
                  for="name"
                >
                  Name
                </label>
                <input
                  class="text-sm w-full text-sm"
                  id="name"
                  name="name"
                  placeholder="Name"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field text-dial-blueberry"
                  for="use-case-sector"
                >
                  Sector
                </label>
                <div
                  class=" css-1uaxf62-container"
                  id="use-case-sector"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-:r2:-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="react-select__control css-afrqkl-control"
                  >
                    <div
                      class="react-select__value-container css-17t7gkf-ValueContainer"
                    >
                      <div
                        class="react-select__placeholder css-5rjclb-placeholder"
                        id="react-select-:r2:-placeholder"
                      >
                        Sector
                      </div>
                      <div
                        class="react-select__input-container css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-:r2:-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="react-select__input"
                          id="react-select-sector"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="text-lg"
                          fill="none"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <p
                  class="text-xs italic text-validation-error"
                >
                  This field is required
                </p>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field text-dial-blueberry"
                  for="use-case-maturity"
                >
                  Maturity
                </label>
                <div
                  class=" css-1uaxf62-container"
                  id="use-case-maturity"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-:r3:-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="react-select__control css-afrqkl-control"
                  >
                    <div
                      class="react-select__value-container react-select__value-container--has-value css-17t7gkf-ValueContainer"
                    >
                      <div
                        class="react-select__single-value css-1dimb5e-singleValue"
                      >
                        Published
                      </div>
                      <div
                        class="react-select__input-container css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="react-select__input"
                          id="react-select-maturity"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="text-lg"
                          fill="none"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="markdown-url"
                >
                  Markdown URL
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="markdown-url"
                    placeholder="Markdown URL"
                    value=""
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire"
                  for="image-uploader"
                >
                  Logo
                </label>
                <label
                  class="flex items-center"
                >
                  <input
                    accept=".jpg,.jpeg,.png,.bmp"
                    class="bg-white file:hidden w-full text-sm"
                    id="image-uploader"
                    name="imageFile"
                    type="file"
                  />
                  <div
                    class="-ml-11 flex p-1"
                  >
                    <span
                      class="h-full pl-1 border-l text-dial-gray-dark border-dial-gray-dark"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        version="1.1"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                        />
                        <path
                          d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                        />
                        <path
                          d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
                <div
                  class="text-xs italic text-dial-stratos"
                >
                  Note: Supported file types are jpg, png, and bmp
                </div>
              </div>
              <label
                class="flex gap-x-2 items-center self-start text-dial-sapphire"
              >
                <input
                  class="h-5 w-5"
                  name="govStackEntity"
                  type="checkbox"
                />
                GovStack use case
              </label>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="text-dial-sapphire required-field"
                  id="description"
                >
                  Description
                </label>
                <div
                  class="editor-shell read-write"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Undo"
                        class="toolbar-item spaced"
                        disabled=""
                        title="Undo (Ctrl+Z)"
                        type="button"
                      >
                        <i
                          class="format undo"
                        />
                      </button>
                      <button
                        aria-label="Redo"
                        class="toolbar-item"
                        disabled=""
                        title="Redo (Ctrl+Y)"
                        type="button"
                      >
                        <i
                          class="format redo"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text style"
                        class="toolbar-item block-controls"
                        type="button"
                      >
                        <span
                          class="icon block-type paragraph"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Normal
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for font family"
                        class="toolbar-item font-family"
                        type="button"
                      >
                        <span
                          class="icon block-type font-family"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Arial
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Decrease font size"
                        class="toolbar-item font-decrement"
                        title="Decrease font size (Ctrl+Shift+,)"
                        type="button"
                      >
                        <i
                          class="format minus-icon"
                        />
                      </button>
                      <input
                        class="toolbar-item font-size-input"
                        max="72"
                        min="8"
                        title="Font size"
                        type="number"
                        value="15"
                      />
                      <button
                        aria-label="Increase font size"
                        class="toolbar-item font-increment"
                        title="Increase font size (Ctrl+Shift+.)"
                        type="button"
                      >
                        <i
                          class="format add-icon"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Format text as bold. Shortcut: Ctrl+B"
                        class="toolbar-item spaced "
                        title="Bold (Ctrl+B)"
                        type="button"
                      >
                        <i
                          class="format bold"
                        />
                      </button>
                      <button
                        aria-label="Format text as italics. Shortcut: Ctrl+I"
                        class="toolbar-item spaced "
                        title="Italic (Ctrl+I)"
                        type="button"
                      >
                        <i
                          class="format italic"
                        />
                      </button>
                      <button
                        aria-label="Format text to underlined. Shortcut: Ctrl+U"
                        class="toolbar-item spaced "
                        title="Underline (Ctrl+U)"
                        type="button"
                      >
                        <i
                          class="format underline"
                        />
                      </button>
                      <button
                        aria-label="Insert code block"
                        class="toolbar-item spaced "
                        title="Insert code block (Ctrl+Shift+C)"
                        type="button"
                      >
                        <i
                          class="format code"
                        />
                      </button>
                      <button
                        aria-label="Insert link"
                        class="toolbar-item spaced "
                        title="Insert link (Ctrl+K)"
                        type="button"
                      >
                        <i
                          class="format link"
                        />
                      </button>
                    </div>
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Formatting text color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon font-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting background color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon bg-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting options for additional text styles"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon dropdown-more"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Insert specialized editor node"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon plus"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Insert
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text alignment"
                        class="toolbar-item spaced alignment"
                        type="button"
                      >
                        <span
                          class="icon left-align"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Left Align
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="editor-container "
                  >
                    <div
                      class="editor-scroller"
                    >
                      <div
                        class="editor"
                      >
                        <div
                          aria-labelledby="description"
                          aria-placeholder="Description"
                          class="ContentEditable__root read-write"
                          contenteditable="true"
                          data-lexical-editor="true"
                          role="textbox"
                          spellcheck="true"
                          style="user-select: text; white-space: pre-wrap; word-break: break-word;"
                        >
                          <p
                            class="ExchangeLexicalTheme__paragraph ExchangeLexicalTheme__ltr"
                            dir="ltr"
                          >
                            <span
                              data-lexical-text="true"
                            >
                              Description for the use case.
                            </span>
                          </p>
                        </div>
                        <div
                          draggable="true"
                        >
                          <div
                            class="icon draggable-block-menu"
                            style="opacity: 0; transform: translate(-10000px, -10000px);"
                          >
                            <div
                              class="icon"
                            />
                          </div>
                        </div>
                        <div
                          class="draggable-block-target-line"
                        />
                        <div
                          class="link-editor"
                          style="opacity: 1; transform: translate(-5px, 10px);"
                        />
                        <div
                          class="table-cell-action-button-container table-cell-action-button-container--inactive"
                        />
                      </div>
                    </div>
                    <div />
                    <div
                      class="actions"
                    >
                      <button
                        aria-label="Disable speech to text"
                        class="action-button action-button-mic"
                        title="Speech To Text"
                        type="button"
                      >
                        <i
                          class="mic"
                        />
                      </button>
                      <button
                        aria-label="Clear editor contents"
                        class="action-button clear"
                        title="Clear"
                        type="button"
                      >
                        <i
                          class="clear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-wrap text-base mt-6 gap-3"
              >
                <button
                  class="submit-button"
                  type="submit"
                >
                  Submit Use Case
                </button>
                <button
                  class="cancel-button"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the useCase detail page. Should render unauthorized for non logged in user. 1`] = `
<div>
  <div
    class="Toastify"
  />
</div>
`;
